2005-09-06  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm, Valdiation.pm: use more descriptive tempdir names.


2005-09-05  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Services.pm: Fix up spec2struct and spec2string to conform to tests.

2005-09-05  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* CLI.pm, Engine.pm, PkgVersion.pm, Shlibs.pm: Podchecker fixes.
	* Services.pm: spec2string and spec2struct: Parse package specifications,
	eg: 'foo (>= 1.0-1)'.

2005-09-05  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* CLI.pm: Abstract out word-wrapping part of print_breaking into its own
	method.
	* Engine.pm: New get_options wrapper for Getopt::Long:
		- No more explicit @ARGV swapping.
		- Option definition and help text right next to each other, so they
		don't get out of sync.
		- Word wrap help nicely for screen width.
	
2005-09-02  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Invalidate dpkg cache after installing buildlock pkg

2005-09-02  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Implement cleanup_buildlocks

2005-09-01  Daniel Macks  <dmacks@netspace.org>

	* Validation: dpkg validation now performed on an unpacked archive
	with a wrapper to unpack a .deb (merge in val-unpack branch).
	* PkgVersion.pm: -m mode validates %d *before* constructing .deb.

2005-08-31  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Set invariant name *before* package name is expanded.
	
2005-08-31  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Don't error if .info file not in 'finkinfo'. For a
	regular index, it's enforced by only looking there. For scripts, we don't
	care anyhow.
	
2005-08-31  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Fix deb-building breakage.
	
	*** Rebuild your DB with 'fink index -f' if you used Fink from HEAD since
	2005-08-30 ***

2005-08-31  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Config.pm: Fixed bug causing 0 to be taken as array ref.
